fix: Set blurred background to cover

--- a/style.css
+++ b/style.css
@@ -36,6 +36,9 @@ body {
     justify-content: center;
     align-items: center;
     background-image: url(assets/images/blurred-background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .signUpMenu {
